# coremetrics

./: .clang-format  .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  ADVANTAGES.md  API.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DOCS.md  Dockerfile.linux  LICENSE  Makefile  OVERNIGHT_BUILD_SPEC.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  a.out  base.xml  build_warnings.txt  cliff.toml  compile-uml.sh  coremetrics.cpp  main.cpp  run-cross-platform-tests.sh  stress.sh  unit_test_output.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml
assets/: font.LICENSE.txt
bench/: bench.cpp
docs/: ARCHITECTURE.md  COMPARISON.md  PACKAGING.md  PERFORMANCE.md  ROADMAP.md  SIGNING.md
include/: AboutTab.hpp  ArgParse.hpp  AssetPath.hpp  Bar.hpp  BarTest.hpp  Battery.hpp  Bookmark.hpp  Box.hpp  Button.hpp  ClickEvent.hpp  Cloneable.hpp  CloneableTest.hpp  CpuTemp.hpp  DiskUsageRow.hpp  Donut.hpp  Dropdown.hpp  Element.hpp  EmptyStates.hpp  Event.hpp  EventManager.hpp  EventManagerTest.hpp  EventType.hpp  Exporter.hpp  FilterStrip.hpp  FooterLiveStats.hpp  GUIElement.hpp  GUIElementFactory.hpp  GUIElementTest.hpp  GUIElements.hpp  GUIFile.hpp  Gauge.hpp  HeadlessRunner.hpp  Heatmap.hpp  HelpOverlay.hpp  HwInfo.hpp  KeyboardEvents.hpp  KillLog.hpp  Label.hpp  Layout.hpp  LayoutManager.hpp  (+69 more)
man/: coremetrics.1
packaging/: README.md
scripts/: compute-contributions.sh  gen-changelog.sh  gen-contributors.sh  layout-audit.py  lint-docs.sh  release-notes.sh  release.sh  test-cli-top.sh  windows-arm64-smoke.ps1
snap/: snapcraft.yaml
src/: AboutTab.cpp  ArgParse.cpp  AssetPath.cpp  Bar.cpp  Battery.cpp  Bookmark.cpp  Box.cpp  Button.cpp  ClickEvent.cpp  CpuTemp.cpp  DiskUsageRow.cpp  Donut.cpp  Dropdown.cpp  EmptyStates.cpp  Event.cpp  EventManager.cpp  Exporter.cpp  FilterStrip.cpp  FooterLiveStats.cpp  GUIElementFactory.cpp  GUIElements.cpp  GUIFile.cpp  Gauge.cpp  HeadlessRunner.cpp  Heatmap.cpp  HelpOverlay.cpp  HwInfo.cpp  KeyboardEvents.cpp  KillLog.cpp  Label.cpp  Layout.cpp  LayoutManager.cpp  LayoutSink.cpp  LayoutUtils.cpp  Line.cpp  MemBreakdownStrip.cpp  MetricReadouts.cpp  Modal.cpp  (+45 more)
(+109 files in other folders)
